some type fixes

--- a/pages/references.html
+++ b/pages/references.html
@@ -10,8 +10,8 @@
 <header id="header">
 
 </header>
-<main>
-    <h1>reference</h1>
+<main class="ref-main">
+    <h1>Reference</h1>
     <ul>
         <li>Storey, Z. (2016). Corsair Scimitar RGB Gaming Mouse. 
             <br><span style="margin-left: 25px;">In Maximum PC (Vol. 21, Issue 3, p. 81–). Future Publishing Ltd.</span></li>
@@ -34,9 +34,9 @@
     </ul>
 </main>
 <footer>
-        <div><a href="../index.html">home</a></div>
+        <div><a href="../index.html">Home</a></div>
         <div>fkennedy1 COMM1150-07 2023</div>
-        <div><a href="#header">references</a></div>
+        <div><a href="#header">References</a></div>
 </footer>  
 </body>
 </html>
