--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMM Product Review</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header" id="header">
@@ -131,7 +134,7 @@
                 <div class="pricing two-col">
                     <div>
                         <h3>Pricing</h3>
-                        <p><span style="margin-left: 25px;"></span>Corsair built their brand on having unmatched quality control while using high-end materials for all their products, and the Scimitar gaming mouse is no different. The Scimitar while being on the cheaper end compared to its biggest competitors by no means feels "cheap". In your hand the mouse feels solid and ergonomically comfortable, which is important when raid night goes late into the night. </p>
+                        <p><span style="margin-left: 25px;"></span>Corsair built their brand on having unmatched quality control while using high-end materials for all their products, and the Scimitar gaming mouse is no different. The Scimitar while being on the cheaper end compared to its biggest competitors by no means feels "cheap". In your hand the mouse feels solid and ergonomically comfortable, which is important when raid night goes late into the night. Scimitar(n.d)</p>
                     </div>
                     <div class="table-rate">
                         <div></div>
@@ -190,19 +193,15 @@
                         <h3>Customization</h3>
                         <p>  <span style="margin-left: 35px;"></span>The scimitar gaming mouse is the perfect blend of visual and hardware customization.
                              With the ability to not only program all 17 buttons but adjust the placement of the 12 button thumb pad on the Scimitar, it brings something none of its rivals can.
-                              Using a locking pin with a provided allen key there will be no worry about your buttons moving or slipping mid game.
+                              Using a locking pin with a provided allen key there will be no worry about your buttons moving or slipping mid game. Scimitar (n.d.)
                               <br>
                               <br> 
-                              <span style="margin-left: 35px;"></span>If there was a negative to be mentioned, it would be the lack of detachable side rests like on other models such as the Dark Core Pro.
-                                All this is to not mention the ability to save multiple profiles for button hotkeys and the RGB lighting. 
-                                While having to use IQUE, Corsair's free software, can have a learning curve to get everything out of this hardware. 
-                                Everything Corsair makes is pretty much plug and play to get you right into the action.</p>
+                              <span style="margin-left: 35px;"></span>If there was a negative to be mentioned, it would be the lack of detachable side rests like on other models such as the Dark Core Pro. All this is to not mention the ability to save multiple profiles for button hotkeys and the RGB lighting. While having to use IQUE, Corsair's free software, has a learning curve to get everything out of this hardware. Everything Corsair makes is plug and play to get you right into the action so that you can adjust everything in your own time. Scimitar (n.d)</p>
                     </div>
                 </div>
                 <div class="conclusions">
                     <h3>Conclusion</h3>
-                    <p><span style="margin-left: 25px;"></span>In closing, Corsair has once again found the balance between cost and custom, all without sacrificing the all important quality.
-                         With 17 custom mapped buttons, a finely tuned optical sensor and lightweight design, you will be able to perform on raid night without having to break the bank while doing it. </p>
+                    <p><span style="margin-left: 25px;"></span>In closing, while the Corsair Scimitar has a few draw backs such as the lack of any side rests or the reliance on using the Ique software to get that custom feel.  Corsair has once again found the balance between cost and custom, all without sacrificing the all important quality. With 17 custom mapped buttons, a finely tuned optical sensor and lightweight design, you will be able to perform on raid night without having to break the bank while doing it.</p>
                 </div>
             </div>            
         </div>
