--- a/pages/references.html
+++ b/pages/references.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../styles/reference.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
 <header id="header">
@@ -31,6 +34,12 @@
 <br>
         <li>Honorof, M. (2020 October 08). Razer Naga review.<br>
             <span style="margin-left: 25px;">https://www.tomsguide.com/reviews/razer-naga-pro.</span></li>
+            <br>
+        <li>SCIMITAR RGB ELITE Optical MOBA/MMO Gaming Mouse (n.d).<br>
+                <span style="margin-left: 25px;">Retrieved November 20, 2020, from</span> 
+                    <span style="margin-left: 25px;">https://www.corsair.com/us/en/p/gaming-mouse/ch-9304211-</span>
+                        <span style="margin-left: 25px;">na/scimitar-rgb-elite-optical-moba-mmo-gaming-mouse-ch-</span>
+                            <span style="margin-left: 25px;">9304211-na#tab-techspecs</span></li>    
     </ul>
 </main>
 <footer>
